2011-02-21  Charlie Zender  <zender@uci.edu>

	* Threaded the needle with new fix so wrapped hyperslabs keep working as before

	* Added fix to TODO nco1007 that now breaks double-wrapped hypserslab test

	* Replace nco_get_vara() with nc_get_vara_double() in nco_lmt_evl()

	* Clean-up, add diagnostics to nco_lmt_evl() while working to fix TODO nco1007

2011-02-17  Charlie Zender  <zender@uci.edu>

	* Change scp paths from greenplanet to gplogin2

2011-02-12  Charlie Zender  <zender@uci.edu>

	* Migrate from old sourceforge (SF) paths, e.g.,
	/home/groups/n/nc/nco/htdocs/index.shtml
	to new paths, e.g.,
	/home/project-web/nco/htdocs/index.shtml

2011-02-03  Charlie Zender  <zender@uci.edu>

	* Change ndrv from 65534 to 65532 as per Griffith Young

2011-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.7 release procedure:
 	Changes since nco-4_0_6:
	cd ~/nco;cvs tag -d nco-4_0_7;cvs tag -d nco-4_0_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.7 release"
	cvs tag -c nco-4_0_7;cvs tag -c nco-4_0_7-1

	* Fix NC_MAX_BYTE typo in nco.h which affected nco_pck.c

2011-01-16  Charlie Zender  <zender@uci.edu>

	* Tidy ncatted.c, ncrename.c

	* Add helpful debugging output to nco_aed_prc()

2011-01-14  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: clang, YYYYMMDD-averaging, xtr ass crd
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.6 release"
	cvs tag -c nco-4_0_6;cvs tag -c nco-4_0_6-1

	* Debian rules: Build with dap-netcdf netcdf4 udunits2 by default

	* Update NCO ANNOUNCE to clarify outstanding bugs

2011-01-03  Charlie Zender  <zender@uci.edu>

	* Define and document, but do not solve, degenerate hyperslabbing
	bug reported by Jeff Daily.

	* Be excruciatingly precise about variable list merging

	* Tidy error messages in nco_dmn_utl.c and nco_var_lst.c prior to
	fixing false positive WARNING with ncbo operating on a coordinate
	and the scalar-average of the coordinate.
